Enhance CodeTop FSRS system with comprehensive authentication and user management features
- Implement JWT authentication with OAuth2 support (GitHub/Google)
- Add complete user management system with role-based access
- Enhance FSRS algorithm with 17-parameter optimization
- Implement comprehensive API endpoints for problems, reviews, and analytics
- Add Redis caching layer for improved performance
- Update frontend with modern React components and responsive design
- Add rate limiting and security hardening features
- Implement leaderboard and analytics dashboard
- Add comprehensive validation and error handling

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>